# vmlinux-to-elf

./: .gitignore  README.md  gui  kallsyms-finder  kernel-raw-decompressor  pyproject.toml  run-tests  setup.py  snapcraft.yaml  vmlinux-to-elf
.github/ISSUE_TEMPLATE/: bug_report.md
.github/hooks/: pre-commit
.github/workflows/: python-publish.yml  workflow.yml
packaging/flatpak/: README.md  build.sh  python3-modules.json  re.fossplant.vmlinux-to-elf.json
packaging/snap/: build.sh
src/vmlinux_to_elf/core/: architecture_detecter.py  elf_symbolizer.py  kallsyms.py  vmlinuz_decompressor.py
src/vmlinux_to_elf/scripts/: kallsyms_finder.py  run_tests.py  vmlinux_to_elf.py
src/vmlinux_to_elf/utils/: elf.py  lz4_legacy.py  pretty_print.py
src/vmlinux_to_elf/utils/elf_tests/: ls_arm32_le.elf  ls_mips32_le.elf
vmlinux_to_elf/: architecture_detecter.py  elf_symbolizer.py  gtk_app.py  gui.cmb  gui.py  gui.ui  kallsyms.py  kallsyms_finder.py  main.py  tests.py  vmlinuz_decompressor.py
vmlinux_to_elf/core/: architecture_detecter.py  auto_unpack.py  elf_symbolizer.py  kallsyms.py  vmlinuz_decompressor.py
vmlinux_to_elf/kernel_db/: README.md  database.py
vmlinux_to_elf/scripts/: kallsyms_finder.py  run_tests.py  vmlinux_to_elf.py  vmlinuz_decompressor.py
vmlinux_to_elf/ui/: detected_token_row.py  gtk_app.py  gui.cmb  gui.py  gui.ui  recovered_symbol_row.py
vmlinux_to_elf/ui/assets/: compile_resources.sh  gui-autogenerated.ui  gui.blp  gui.cmb  gui.ui  re.fossplant.vmlinux-to-elf.desktop  re.fossplant.vmlinux-to-elf.metainfo.xml  style.css  vmlinux-to-elf.cmb  vmlinux-to-elf.gresource  vmlinux-to-elf.gresource.xml
vmlinux_to_elf/utils/: arm64_efi.py  elf.py  lz4_legacy.py  pretty_print.py
vmlinux_to_elf/utils/elf_tests/: ls_mips32_be.elf  ls_mips64_be.elf  ls_renesas.elf  ls_x64.elf
